preprod-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
  creationTimestamp: "2025-07-31T23:17:28Z"
  generation: 2
  labels:
    app: preprod
  name: preprod
  namespace: preprod
  resourceVersion: "58398"
  uid: 4b1cce70-8feb-4a6f-b187-323b4f6b0055
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: preprod
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: preprod
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: web-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: web-data
        persistentVolumeClaim:
          claimName: preprod-pvc
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2025-07-31T23:17:32Z"
    lastUpdateTime: "2025-07-31T23:17:32Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-07-31T23:17:28Z"
    lastUpdateTime: "2025-07-31T23:18:49Z"
    message: ReplicaSet "preprod-56db5d465c" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 2
  readyReplicas: 2
  replicas: 3
  unavailableReplicas: 1
  updatedReplicas: 1
