preprod-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: preprod-svc
  namespace: preprod
spec:
  selector:
    app: preprod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
