preprod-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: preprod-ing
  namespace: preprod
spec:
  rules:
  - host: "preprod"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: preprod-svc
            port:
              number: 80
